commited trying to find git repo 1-19-25

--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <html>
-</html> 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Flexbox Images</title>
+
+<title>Meghan Website of Fun</title>
 <link rel="stylesheet" href="./style.css" />
 
-<head>Meghan O'Halloran Personal Website - II
+<head>Meghan O'Halloran's Website of Things to do in Colorado </head>
+
+<body>
+<header>
+  <p>Skiing is Awesome</p>
+  <img id="logo"
+    src="https://cdn3.vectorstock.com/i/1000x1000/58/92/cartoon-girl-working-with-computer-vector-21575892.jpg"
+    alt="Girl at computer" />
+  <img id="logo"
+    src="https://cdn3.vectorstock.com/i/1000x1000/58/92/cartoon-girl-working-with-computer-vector-21575892.jpg"
+    alt="Girl at computer" />
+  <img id="https://www.youtube.com/watch?v=491CuCZnoO0" />
+  <video width="320" height="240" controls>
+    <img id="logo"
+      src="https://media.istockphoto.com/id/1767535716/photo/professional-skier-skiing-on-slopes-in-the-swiss-alps-towards-the-camera.jpg?s=612x612&w=0&k=20&c=wv8ukOhCyOwkQonynMJPitYJDvZOJR1oKGNrDrmBbr4="
+      alt="skiing video" />
 
 
-  <header>
-    <img id="logo" src="https://cdn3.vectorstock.com/i/1000x1000/58/92/cartoon-girl-working-with-computer-vector-21575892.jpg"/>
-    
+      </body>
 
-  </header>
+    type="video/mp4">
+  </video>
+
+  <input type="checkbox">
+  <p>Are you having fun yet?</p>
 
 
+</header>
 
 
-</head>
-
-<body></body>
-<index class="html"></index>
-
-</body>
+</html>
